Fix overflow hero text

--- a/assets/sass/sufficiency-hugo-theme/_style.sass
+++ b/assets/sass/sufficiency-hugo-theme/_style.sass
@@ -1,7 +1,7 @@
 .page__home
     .hero
         display: flex
-        height: 70vh
+        min-height: 50vh
         .container
             margin: auto
             .content
